Fix line spacing

--- a/css/main.css
+++ b/css/main.css
@@ -31,13 +31,13 @@ article h1 {
   font-size: 1.5rem;
   font-weight: normal;
   margin: 0;
-  padding-top: 1em;
+  padding-top: 2em;
 }
 
 article header p {
   font-style: italic;
   color: #555;
-  margin-top: 0.3em;
+  margin-top: .5em;
   margin-bottom: 1.3em;
 }
 
